testing input and button functionality.

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
           <!-- Email input -->
           <div class="form-outline mb-2 col-md-9 mx-3">
-            <input type="email" id="form3Example3" class="form-control form-control-md"
+            <input type="email" id="login_email" class="form-control form-control-md"
               placeholder="Enter a valid email address" />
             <label class="form-label" for="form3Example3">Email address</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-2 col-md-9 mx-3">
-            <input type="password" id="form3Example4" class="form-control form-control-md"
+            <input type="password" id="login_password" class="form-control form-control-md"
               placeholder="Enter password" />
             <label class="form-label" for="form3Example4">Password</label>
           </div>
@@ -66,7 +66,7 @@
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-1">
-            <button type="button" class="btn btn-primary btn-lg mx-3"
+            <button id="loginbtn" type="button" class="btn btn-primary btn-lg mx-3"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0 mx-3">Don't have an account? Register ------></p>
           </div>
@@ -170,5 +170,6 @@
   <!-- Footer -->
 </section>
 
+<script src="/front-end/javascript/scripts.js"></script>
 </body>
 </html>
