Added signup code file.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
           </div>
             <div class="row">
                 <div class="col">
+                  <!-- Password input Check -->
+                    <div class="form-outline mb-2 col-md-9 mx-3">
+                        <input type="text" id="form3Example4" class="form-control form-control-md"
+                        placeholder="name" />
+                        <label class="form-label" for="form3Example4">Name</label>
+                    </div>
+
                     <!-- Email input -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
                         <input type="email" id="form3Example3" class="form-control form-control-md"
@@ -95,22 +102,9 @@
                         <label class="form-label" for="form3Example4">Password</label>
                     </div>
 
-                    <!-- Password input Check -->
-                    <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="password" id="form3Example4" class="form-control form-control-md"
-                        placeholder="Confirm password" />
-                        <label class="form-label" for="form3Example4">Confirm Password</label>
-                    </div>
                 </div>
 
                 <div class="col">
-                    <!-- Email input -->
-                    <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="email" id="form3Example3" class="form-control form-control-md"
-                        placeholder="Date of birth" />
-                        <label class="form-label" for="form3Example3">Date of birth</label>
-                    </div>
-
                     <!-- Password input -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
                         <input type="password" id="form3Example4" class="form-control form-control-md"
