--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 <div class="col">
                   <!-- Password input Check -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="text" id="form3Example4" class="form-control form-control-md"
+                        <input type="text" id="user_name" class="form-control form-control-md"
                         placeholder="name" />
                         <label class="form-label" for="form3Example4">Name</label>
                     </div>
 
                     <!-- Email input -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="email" id="form3Example3" class="form-control form-control-md"
+                        <input type="email" id="register_email" class="form-control form-control-md"
                         placeholder="Enter a valid email address" />
                         <label class="form-label" for="form3Example3">Email address</label>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="password" id="form3Example4" class="form-control form-control-md"
+                        <input type="password" id="user_password" class="form-control form-control-md"
                         placeholder="Enter password" />
                         <label class="form-label" for="form3Example4">Password</label>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="col">
                     <!-- Password input -->
                     <div class="form-outline mb-2 col-md-9 mx-3">
-                        <input type="password" id="form3Example4" class="form-control form-control-md"
+                        <input type="password" id="user_gender" class="form-control form-control-md"
                         placeholder="Male or Female" />
                         <label class="form-label" for="form3Example4">Gender</label>
                     </div>
@@ -126,7 +126,7 @@
           </div>
 
           <div class="text-center text-lg-center mt-4 pt-1">
-            <button type="button" class="btn btn-success btn-lg mx-3"
+            <button type="button" id="registerbtn" class="btn btn-success btn-lg mx-3"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
             <p class="small fw-bold mt-2 pt-1  mx-3 mb-2">Already have an account? Login </p>
           </div>
